--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "rustls-acme"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Florian Uekermann <florian@uekermann.me>"]
 edition = "2018"
 description = "TLS certificate management and serving using rustls"
 license = "Apache-2.0 OR MIT"
+documentation = "https://docs.rs/rustls-acme"
 keywords = ["acme", "rustls", "tls"]
 categories = ["asynchronous", "cryptography", "network-programming"]
 
