--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustls-acme"
-version = "0.1.6"
+version = "0.1.7"
 authors = ["Florian Uekermann <florian@uekermann.me>"]
 edition = "2018"
 description = "TLS certificate management and serving using rustls"
@@ -19,14 +19,15 @@ async-h1 = "2.3"
 http-types = "2.9"
 serde_json = "1.0"
 serde = "1.0"
-ring = { version="0.16", features=["std"] }
+ring = { version = "0.16", features = ["std"] }
 base64 = "0.13"
 log = "0.4"
 webpki-roots = "0.21"
 pem = "0.8"
 thiserror = "1.0"
-x509-parser = "0.9"
+x509-parser = "0.10"
 chrono = "0.4"
+url = "2.2"
 
 [dev-dependencies]
 simple_logger = "1.11"
