--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustls-acme"
-version = "0.2.0"
+version = "0.3.0-beta.1"
 authors = ["Florian Uekermann <florian@uekermann.me>"]
 edition = "2018"
 description = "TLS certificate management and serving using rustls"
@@ -11,7 +11,6 @@ keywords = ["acme", "rustls", "tls"]
 categories = ["asynchronous", "cryptography", "network-programming"]
 
 [dependencies]
-async-std = "1.8"
 async-rustls = "0.2"
 futures = "0.3"
 rcgen = "0.8"
@@ -28,7 +27,13 @@ thiserror = "1.0"
 x509-parser = "0.10"
 chrono = "0.4"
 url = "2.2"
+async-trait = "0.1.53"
+smol = "1.2.5"
+pin-project = "1.0.10"
+async-io = "1.6.0"
 
 [dev-dependencies]
-simple_logger = "1.11"
+simple_logger = "2.1.0"
 structopt = "0.3"
+clap = { version = "3.1.18", features = ["derive"] }
+smol-potat = "1.1.2"
