--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,4 @@ clap = { version = "3.1.18", features = ["derive"] }
 smol-potat = "1.1.2"
 tokio = { version="1.19.2", features = ["full"] }
 tokio-util = { version="0.7.3", features = ["compat"] }
+tokio-stream = { version="0.1.9", features = ["net"] }
