--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustls-acme"
-version = "0.3.0"
+version = "0.4.0-beta1"
 authors = ["Florian Uekermann <florian@uekermann.me>"]
 edition = "2018"
 description = "TLS certificate management and serving using rustls"
@@ -10,8 +10,15 @@ documentation = "https://docs.rs/rustls-acme"
 keywords = ["acme", "rustls", "tls"]
 categories = ["asynchronous", "cryptography", "network-programming"]
 
+[features]
+axum = ["axum-server", "tokio-util", "tokio"]
+
+[[example]]
+name="low_level_axum"
+required-features=["axum"]
+
 [dependencies]
-async-rustls = "0.2.0"
+futures-rustls = { git="https://github.com/FlorianUekermann/futures-rustls.git" }
 futures = "0.3.21"
 rcgen = "0.9.2"
 async-h1 = "2.3.3"
@@ -31,6 +38,10 @@ async-trait = "0.1.53"
 smol = "1.2.5"
 pin-project = "1.0.10"
 async-io = "1.6.0"
+rustls = "0.20.6"
+axum-server = { version = "0.4.1", features = ["tls-rustls"], optional=true }
+tokio-util = { version= "0.7.3", optional= true }
+tokio = { version= "1.20.1", optional= true }
 
 [dev-dependencies]
 simple_logger = "2.1.0"
@@ -40,3 +51,4 @@ smol-potat = "1.1.2"
 tokio = { version="1.19.2", features = ["full"] }
 tokio-util = { version="0.7.3", features = ["compat"] }
 tokio-stream = { version="0.1.9", features = ["net"] }
+axum = "0.5.13"
