--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ name="low_level_axum"
 required-features=["axum"]
 
 [dependencies]
-futures-rustls = { git="https://github.com/FlorianUekermann/futures-rustls.git" }
+futures-rustls = "0.22.1"
 futures = "0.3.21"
 rcgen = "0.9.2"
 async-h1 = "2.3.3"
