--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustls-acme"
-version = "0.5.3"
+version = "0.6.0"
 authors = ["Florian Uekermann <florian@uekermann.me>"]
 edition = "2018"
 description = "TLS certificate management and serving using rustls"
@@ -45,6 +45,7 @@ axum = "0.5.13"
 tokio = { version="1.19.2", features = ["full"] }
 tokio-stream = { version="0.1.9", features = ["net"] }
 tokio-util = { version="0.7.3", features = ["compat"] }
+warp = "0.3.4"
 
 [package.metadata.docs.rs]
 all-features = true
