--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "rustls-acme"
-version = "0.6.0"
+version = "0.7.0"
 authors = ["Florian Uekermann <florian@uekermann.me>"]
 edition = "2018"
 description = "TLS certificate management and serving using rustls"
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/FlorianUekermann/rustls-acme"
 documentation = "https://docs.rs/rustls-acme"
-keywords = ["acme", "rustls", "tls"]
+keywords = ["acme", "rustls", "tls", "letsencrypt"]
 categories = ["asynchronous", "cryptography", "network-programming"]
 
 [dependencies]
-futures-rustls = "0.22.2"
+futures-rustls = "0.24"
 futures = "0.3.21"
 rcgen = "0.9.2"
 async-h1 = "2.3.3"
@@ -31,7 +31,7 @@ async-trait = "0.1.53"
 smol = "1.2.5"
 pin-project = "1.0.10"
 async-io = "1.6.0"
-rustls = "0.20.6"
+rustls = "0.21"
 tokio = { version= "1.20.1", optional= true }
 tokio-util = { version="0.7.3", features = ["compat"], optional=true }
 axum-server = { version = "0.4.1", features = ["tls-rustls"], optional=true }
