--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,8 @@ keywords = ["acme", "rustls", "tls", "letsencrypt"]
 categories = ["asynchronous", "cryptography", "network-programming"]
 
 [dependencies]
-futures-rustls = "0.24"
 futures = "0.3.21"
 rcgen = "0.10"
-async-h1 = "2.3.3"
 http-types = { version = "2.12.0", default-features = false }
 serde_json = "1.0.81"
 serde = "1.0.137"
@@ -28,12 +26,21 @@ x509-parser = "0.13.2"
 chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
 url = "2.2.2"
 async-trait = "0.1.53"
-smol = "1.3"
-async-io = "1.6.0"
 rustls = "0.21"
-tokio = { version= "1.20.1", optional= true }
-tokio-util = { version="0.7.3", features = ["compat"], optional=true }
-axum-server = { version = "0.5", features = ["tls-rustls"], optional=true }
+
+# AsyncStd
+async-h1 = { version = "2.3.3", optional = true }
+futures-rustls = { version = "0.24", optional = true }
+smol = { version = "1.3", optional = true }
+async-io = { version = "1.6.0", optional = true }
+
+# Tokio
+tokio = { version = "1.20.1", optional = true }
+tokio-rustls = { version = "0.24", optional = true }
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"], optional = true }
+
+# Axum
+axum-server = { version = "0.5", features = ["tls-rustls"], optional = true }
 
 [dev-dependencies]
 simple_logger = "2.1.0"
@@ -51,8 +58,10 @@ all-features = true
 rustdoc-args = ["--cfg", "doc_auto_cfg"]
 
 [features]
+default = ["async-std"]
 axum = ["dep:axum-server", "tokio"]
-tokio = ["dep:tokio", "dep:tokio-util"]
+async-std = ["dep:async-h1", "dep:futures-rustls", "dep:smol", "dep:async-io"]
+tokio = ["dep:tokio", "dep:tokio-rustls", "dep:reqwest"]
 
 [[example]]
 name="low_level_axum"
@@ -65,3 +74,15 @@ required-features=["tokio"]
 [[example]]
 name="high_level_tokio"
 required-features=["tokio"]
+
+[[example]]
+name="low_level_tokio"
+required-features=["tokio"]
+
+[[example]]
+name="low_level"
+required-features=["async-std"]
+
+[[example]]
+name="high_level"
+required-features=["async-std"]
