--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ tokio = { version="1.19.2", features = ["full"] }
 tokio-stream = { version="0.1.9", features = ["net"] }
 tokio-util = { version="0.7.3", features = ["compat"] }
 warp = "0.3.4"
+async-rustls = "0.4.0"
 
 [package.metadata.docs.rs]
 all-features = true
