--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,19 +14,16 @@ categories = ["asynchronous", "cryptography", "network-programming"]
 futures-rustls = "0.24"
 futures = "0.3.21"
 rcgen = "0.10"
-async-h1 = "2.3.3"
-http-types = { version = "2.12.0", default-features = false }
 serde_json = "1.0.81"
-serde = "1.0.137"
+serde = { version = "1.0.137", features=["derive"] }
 ring = { version = "0.16.20", features = ["std"] }
 base64 = "0.13.0"
 log = "0.4.17"
-webpki-roots = "0.23"
+webpki-roots = "0.25"
 pem = "1.0.2"
 thiserror = "1.0.31"
 x509-parser = "0.13.2"
 chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
-url = "2.2.2"
 async-trait = "0.1.53"
 smol = "1.3"
 async-io = "1.6.0"
@@ -34,6 +31,9 @@ rustls = "0.21"
 tokio = { version= "1.20.1", optional= true }
 tokio-util = { version="0.7.3", features = ["compat"], optional=true }
 axum-server = { version = "0.5", features = ["tls-rustls"], optional=true }
+async-web-client = "0.2.6"
+http = "0.2.9"
+blocking = "1.4.1"
 
 [dev-dependencies]
 simple_logger = "2.1.0"
