--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,10 @@ axum-server = { version = "0.5", features = ["tls-rustls"], optional=true }
 async-web-client = "0.2.6"
 http = "0.2.9"
 blocking = "1.4.1"
+multi_key_map = "0.3.0"
+async-notify = "0.2.0"
+stream_throttle = { version = "0.5.1", default-features = false, features = ["timer-futures-timer"] }
+pin-project = "1.1.3"
 
 [dev-dependencies]
 simple_logger = "2.1.0"
