--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ multi_key_map = "0.3.0"
 async-notify = "0.2.0"
 stream_throttle = { version = "0.5.1", default-features = false, features = ["timer-futures-timer"] }
 pin-project = "1.1.3"
+bytes = "1.5.0"
 
 [dev-dependencies]
 simple_logger = "2.1.0"
