--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,6 @@ blocking = "1.4.1"
 simple_logger = "2.1.0"
 structopt = "0.3.26"
 clap = { version = "3.1.18", features = ["derive"] }
-smol-potat = "1.1.2"
 axum = "0.7"
 tokio = { version="1.35.1", features = ["full"] }
 tokio-stream = { version="0.1.14", features = ["net"] }
@@ -45,6 +44,8 @@ tokio-util = { version="0.7.10", features = ["compat"] }
 warp = "0.3.4"
 smol = "2.0.0"
 tokio-rustls = "0.25"
+smol-macros = "0.1.0"
+macro_rules_attribute = "0.2.0"
 
 [package.metadata.docs.rs]
 all-features = true
