--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,10 +15,10 @@ jobs:
     strategy:
       matrix:
         toolchain: ["stable", "beta", "nightly"]
-        crypto: ["ring", "aws-lc-rs", "ring,aws-lc-rs", ""]
-        tokio: ["tokio", "tokio,axum", ""]
+        crypto: ["ring", "aws-lc-rs", "ring,aws-lc-rs"]
+        tokio: ["tokio", "axum", ""]
     steps:
       - uses: actions/checkout@v3
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-      - run: cargo build --verbose --features ${{ matrix.crypto }},${{ matrix.tokio }}
-      - run: cargo test --verbose --features ${{ matrix.crypto }},${{ matrix.tokio }}
+      - run: cargo build --verbose --no-default-features --features ${{ matrix.crypto }},${{ matrix.tokio }}
+      - run: cargo test --verbose --no-default-features --features ${{ matrix.crypto }},${{ matrix.tokio }}
