--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ webpki-roots = "0.26"
 pem = "3.0.3"
 thiserror = "1.0.31"
 x509-parser = "0.15.1"
-chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
+time = "0.3.34"
 async-trait = "0.1.53"
 async-io = "2.3.0"
 tokio = { version= "1.20.1", optional= true }
