--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,11 +41,15 @@ axum = "0.7"
 tokio = { version="1.35.1", features = ["full"] }
 tokio-stream = { version="0.1.14", features = ["net"] }
 tokio-util = { version="0.7.10", features = ["compat"] }
-warp = "0.3.4"
+warp = "0.3.7"
 smol = "2.0.0"
 tokio-rustls = { version = "0.26", default-features = false }
 smol-macros = "0.1.0"
 macro_rules_attribute = "0.2.0"
+hyper = "1.3.1"
+http-body-util = "0.1.1"
+bytes = "1.6.0"
+hyper-util = "0.1.3"
 
 [package.metadata.docs.rs]
 all-features = true
@@ -69,4 +73,8 @@ required-features=["tokio"]
 
 [[example]]
 name="high_level_tokio"
+required-features=["tokio"]
+
+[[example]]
+name="high_level_hyper"
 required-features=["tokio"]
