--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ async-trait = "0.1.53"
 async-io = "2.3.0"
 tokio = { version= "1.20.1", optional= true }
 tokio-util = { version="0.7.3", features = ["compat"], optional=true }
-axum-server = { version = "0.6", features = ["tls-rustls"], optional=true }
+axum-server = { version = "0.7", features = ["tls-rustls-no-provider"], optional=true }
 async-web-client = { version = "0.6.2", default-features = false }
 http = "1"
 blocking = "1.4.1"
