--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,5 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - run: rustup component add clippy
       - run: cargo build --verbose --no-default-features --features ${{ matrix.crypto }},${{ matrix.tokio }}
       - run: cargo test --verbose --no-default-features --features ${{ matrix.crypto }},${{ matrix.tokio }}
+      - run: cargo clippy --tests --no-default-features --features ${{ matrix.crypto }},${{ matrix.tokio }}
