--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ hyper = "1.3.1"
 http-body-util = "0.1.1"
 bytes = "1.6.0"
 hyper-util = "0.1.3"
+axum-macros = "0.5.0"
 
 [package.metadata.docs.rs]
 all-features = true
@@ -64,8 +65,12 @@ tokio = ["dep:tokio", "dep:tokio-util"]
 tls12 = ["async-web-client/tls12"]
 
 [[example]]
-name="low_level_axum"
-required-features=["axum"]
+name = "low_level_axum"
+required-features = ["axum"]
+
+[[example]]
+name = "low_level_axum_http"
+required-features = ["axum"]
 
 [[example]]
 name="high_level_warp"
