--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,11 +33,12 @@ axum-server = { version = "0.7", features = ["tls-rustls-no-provider"], optional
 async-web-client = { version = "0.6.2", default-features = false }
 http = "1"
 blocking = "1.4.1"
+tower-service = { version = "0.3.3",  optional=true }
 
 [dev-dependencies]
 simple_logger = "4.3.3"
 clap = { version = "3.1.18", features = ["derive"] }
-axum = "0.7"
+axum = "0.8"
 tokio = { version="1.35.1", features = ["full"] }
 tokio-stream = { version="0.1.14", features = ["net"] }
 tokio-util = { version="0.7.10", features = ["compat"] }
@@ -60,7 +61,8 @@ rustdoc-args = ["--cfg", "doc_auto_cfg"]
 default = ["aws-lc-rs", "tls12"]
 ring = ["dep:ring", "async-web-client/ring", "rcgen/ring"]
 aws-lc-rs = ["dep:aws-lc-rs", "async-web-client/aws-lc-rs", "rcgen/aws_lc_rs"]
-axum = ["dep:axum-server", "tokio"]
+axum = ["dep:axum-server", "tower"]
+tower = ["dep:tower-service", "tokio"]
 tokio = ["dep:tokio", "dep:tokio-util"]
 tls12 = ["async-web-client/tls12"]
 
