--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ async-trait = "0.1.53"
 async-io = "1.6.0"
 rustls = "0.21"
 tokio = { version= "1.20.1", optional= true }
-tokio-util = { version="0.7.3", optional=true }
+tokio-util = { version="0.7.3", optional=true, features = ["compat"] }
 axum-server = { version = "0.5", features = ["tls-rustls"], optional=true }
 async-web-client = "0.2.6"
 http = "0.2.9"
