--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,6 @@ async-web-client = { version = "0.6.2", default-features = false }
 http = "1"
 blocking = "1.4.1"
 tower-service = { version = "0.3.3",  optional=true }
-actix-web = { version = "4", features = ["actix-tls", "rustls-0_23"], optional = true}
 
 [dev-dependencies]
 simple_logger = "5.0.0"
@@ -52,6 +51,7 @@ hyper = "1.3.1"
 http-body-util = "0.1.1"
 bytes = "1.6.0"
 hyper-util = "0.1.3"
+actix-web = { version = "4", features = ["actix-tls", "rustls-0_23"]}
 
 [package.metadata.docs.rs]
 all-features = true
@@ -66,11 +66,10 @@ tower = ["dep:tower-service", "tokio"]
 tokio = ["dep:tokio", "dep:tokio-util"]
 tls12 = ["async-web-client/tls12"]
 webpki-roots = ["dep:webpki-roots"]
-actix-web = ["dep:actix-web"]
 
 [[example]]
 name="low_level_actix"
-required-features=["actix-web"]
+required-features=[]
 
 [[example]]
 name = "low_level_axum"
