--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ hyper = "1.3.1"
 http-body-util = "0.1.1"
 bytes = "1.6.0"
 hyper-util = "0.1.3"
+actix-web = { version = "4", features = ["actix-tls", "rustls-0_23"]}
 
 [package.metadata.docs.rs]
 all-features = true
@@ -65,6 +66,9 @@ tower = ["dep:tower-service", "tokio"]
 tokio = ["dep:tokio", "dep:tokio-util"]
 tls12 = ["async-web-client/tls12"]
 webpki-roots = ["dep:webpki-roots"]
+
+[[example]]
+name="low_level_actix"
 
 [[example]]
 name = "low_level_axum"
