--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,8 @@ http-body-util = "0.1.1"
 bytes = "1.6.0"
 hyper-util = "0.1.3"
 actix-web = { version = "4", features = ["actix-tls", "rustls-0_23"]}
+rustls = "0.23.35"
+ring = "0.17.14"
 
 [package.metadata.docs.rs]
 all-features = true
@@ -94,3 +96,7 @@ required-features=["tokio"]
 [[example]]
 name="high_level_hyper"
 required-features=["tokio"]
+
+[[example]]
+name="high_level_axum"
+required-features=["axum", "tower"]
