--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,6 +10,22 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  build_docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: docs
+      - run: rustup update nightly && rustup default nightly
+      - run: cargo install cargo-docs-rs
+      - run: RUSTDOCFLAGS="-D warnings" cargo docs-rs
   build_and_test:
     runs-on: ubuntu-latest
     strategy:
