--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustls-acme"
-version = "0.15.0"
+version = "0.15.1"
 authors = ["Florian Uekermann <florian@uekermann.me>"]
 edition = "2018"
 description = "TLS certificate management and serving using rustls"
@@ -55,7 +55,7 @@ actix-web = { version = "4", features = ["actix-tls", "rustls-0_23"]}
 
 [package.metadata.docs.rs]
 all-features = true
-rustdoc-args = ["--cfg", "doc_auto_cfg"]
+rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 default = ["aws-lc-rs", "tls12", "webpki-roots"]
